--- a/Makefile.autosetup
+++ b/Makefile.autosetup
@@ -140,7 +140,7 @@ ALLOBJS+=	$(LIBGUIOBJS)
 ###############################################################################
 # libdebug
 LIBDEBUG=	libdebug.a
-LIBDEBUGOBJS=	debug/notify.o debug/parse_test.o debug/window.o
+LIBDEBUGOBJS=	debug/graphviz.o debug/notify.o debug/parse_test.o debug/window.o
 @if HAVE_LIBUNWIND
 LIBDEBUGOBJS+=	debug/backtrace.o
 @endif
