mxapi: add mx_path2 wrappers

--- a/Makefile.autosetup
+++ b/Makefile.autosetup
@@ -68,7 +68,7 @@ NEOMUTTOBJS=	addrbook.o alias.o bcache.o browser.o commands.o \
 		keymap.o mailcap.o main.o menu.o mutt_account.o mutt_attach.o \
 		mutt_body.o mutt_header.o mutt_history.o mutt_logging.o mutt_mailbox.o \
 		mutt_parse.o mutt_signal.o mutt_socket.o mutt_thread.o \
-		muttlib.o mx.o myvar.o pager.o pattern.o postpone.o progress.o query.o \
+		muttlib.o mx.o mx_path.o myvar.o pager.o pattern.o postpone.o progress.o query.o \
 		recvattach.o recvcmd.o resize.o rfc3676.o score.o send.o sendlib.o \
 		sidebar.o smtp.o sort.o state.o status.o system.o version.o \
 		mutt_commands.o mutt_config.o command_parse.o
