--- a/Makefile.autosetup
+++ b/Makefile.autosetup
@@ -151,7 +151,7 @@ ALLOBJS+=	$(LIBDEBUGOBJS)
 ###############################################################################
 # libmbox
 LIBMBOX=	libmbox.a
-LIBMBOXOBJS=	mbox/mbox.o
+LIBMBOXOBJS=	mbox/mbox.o mbox/path.o
 CLEANFILES+=	$(LIBMBOX) $(LIBMBOXOBJS)
 MUTTLIBS+=	$(LIBMBOX)
 ALLOBJS+=	$(LIBMBOXOBJS)
@@ -549,6 +549,7 @@ coverage: all test
 	  --directory compress \
 	  --directory imap \
 	  --directory maildir \
+	  --directory mbox \
 
 	-genhtml --output-directory lcov --frames lcov.info
 	lcov --list lcov.info
