--- a/Makefile.autosetup
+++ b/Makefile.autosetup
@@ -160,7 +160,7 @@ ALLOBJS+=	$(LIBMBOXOBJS)
 # libnotmuch
 @if USE_NOTMUCH
 LIBNOTMUCH=	libnotmuch.a
-LIBNOTMUCHOBJS=	notmuch/mutt_notmuch.o notmuch/nm_db.o
+LIBNOTMUCHOBJS=	notmuch/mutt_notmuch.o notmuch/nm_db.o notmuch/path.o
 CLEANFILES+=	$(LIBNOTMUCH) $(LIBNOTMUCHOBJS)
 MUTTLIBS+=	$(LIBNOTMUCH)
 ALLOBJS+=	$(LIBNOTMUCHOBJS)
@@ -551,6 +551,7 @@ coverage: all test
 	  --directory maildir \
 	  --directory mbox \
 	  --directory nntp \
+	  --directory notmuch \
 
 	-genhtml --output-directory lcov --frames lcov.info
 	lcov --list lcov.info
