--- a/Makefile.autosetup
+++ b/Makefile.autosetup
@@ -65,7 +65,7 @@ NEOMUTTOBJS=	addrbook.o alias.o bcache.o browser.o commands.o \
 		complete.o compose.o conststrings.o context.o copy.o \
 		edit.o editmsg.o enriched.o enter.o flags.o functions.o \
 		git_ver.o handler.o hdrline.o help.o hook.o icommands.o index.o init.o \
-		keymap.o mailcap.o main.o menu.o mutt_account.o mutt_attach.o \
+		keymap.o local.o mailcap.o main.o menu.o mutt_account.o mutt_attach.o \
 		mutt_body.o mutt_header.o mutt_history.o mutt_logging.o mutt_mailbox.o \
 		mutt_parse.o mutt_signal.o mutt_socket.o mutt_thread.o \
 		muttlib.o mx.o mx_path.o myvar.o pager.o pattern.o postpone.o progress.o query.o \
